@@ -75,10 +75,10 @@
 						<mesh id="bfc_${i}m" width="2" fill="true" smooth="true" color="graph_mesh_cycle" color.hue=":hue_${i}m" fcolor="graph_mesh_cycle" fcolor.hue=":hue_${i}m" fcolor.a="0.9" visibility=":flt_m and :cbe_${i}m"/>
 						<mesh id="bfc_${i}s" width="2" fill="true" smooth="true" color="graph_mesh_cycle" color.hue=":hue_${i}s" fcolor="graph_mesh_cycle" fcolor.hue=":hue_${i}s" fcolor.a="0.9" visibility=":flt_s and :cbe_${i}s"/>
 					</ui:for>
-					<mesh id="ifg_m" width="0" color="mid_in" color.a="0.8" fcolor.a="0.8" fill="true" fcolor="mid_in" visibility=":ife_m"/>
-					<mesh id="ifg_s" width="0" color="side_in" color.a="0.8" fcolor.a="0.8" fill="true" fcolor="side_in" visibility=":ife_s"/>
-					<mesh id="ofg_m" width="3" color="mid" visibility=":ofe_m"/>
-					<mesh id="ofg_s" width="3" color="side" visibility=":ofe_s"/>
+					<mesh id="ifg_m" oy=":_ui_zoomable_spectrum_graph ? 1 : 3" width="0" color="mid_in" color.a="0.8" fcolor.a="0.8" fill="true" fcolor="mid_in" visibility=":ife_m"/>
+					<mesh id="ifg_s" oy=":_ui_zoomable_spectrum_graph ? 1 : 3" width="0" color="side_in" color.a="0.8" fcolor.a="0.8" fill="true" fcolor="side_in" visibility=":ife_s"/>
+					<mesh id="ofg_m" oy=":_ui_zoomable_spectrum_graph ? 1 : 3" width="3" color="mid" visibility=":ofe_m"/>
+					<mesh id="ofg_s" oy=":_ui_zoomable_spectrum_graph ? 1 : 3" width="3" color="side" visibility=":ofe_s"/>
 
 					<mesh id="ag_m" width="3" color="mid" smooth="true"/>
 					<mesh id="ag_s" width="3" color="side" smooth="true"/>
@@ -91,6 +91,7 @@
 					<axis min="10" max="24000" angle="0.0" log="true" visibility="false"/>
 					<axis min="-72 db / (:zoom ** 3)" max="24 db * :zoom" color="graph_prim" angle="0.5" log="true"/>
 					<axis min="-1" max="1" visibility="false" angle="0.5"/>
+					<axis min="-72 db" max="24 db" color="graph_prim" angle="0.5" log="true" visibility="false"/>
 
 					<!-- Text -->
 					<ui:with ox="0" oy="2" y="0" halign="1" valign="1">
@@ -243,7 +244,7 @@
 		<!-- down part -->
 		<hbox>
 
-			<cgroup id="bsel" embed.h=":bsel ilt 2" embed.b=":bsel ilt 2">
+			<cgroup id="bsel" embed.h=":bsel ilt 2" embed.b=":bsel ilt 2" width.min="855" height.min="424">
 				<ui:for id="c" first="0" last="1">
 					<ui:eval id="channel" value="(:c ieq 0) ? 'num_id_M_id' : 'num_id_S_ide'"/>
 
@@ -313,7 +314,7 @@
 									<knob id="sf_${ch}" size="16" ssize="3" pad.v="4" scolor="((${i} ieq 0) or :cbe_${ch}) ? 'cycle' : 'cycle_inactive'" scolor.hue=":hue_${ch}"/>
 								</ui:if>
 								<cell cols="2" pad.h="6" bg.color="bg_schema">
-									<grid rows="2" cols="1" hspacing="4">
+									<grid rows="2" cols="1" hspacing="4" vreduce="true">
 										<button
 											id="ee_${ch}"
 											text="labels.chan.on"
