@@ -3,6 +3,8 @@
 *******************************************************************************
 
 === 1.0.16 ===
+* Implemented automatic scale of spectrum graph switch.
+* Aligned the height of the blocks in "cgroup".
 
 
 === 1.0.15 ===
